# mem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
hooks/: mem-precompact.sh  mem-session-start.sh  mem-stop.sh
migrations/: 001_init.sql  002_decay_scope.sql  003_session_analytics.sql  004_indexes.sql
src/: auto.rs  db.rs  main.rs  mcp.rs  suggest.rs  tui.rs  types.rs
