[package]
name = "mem"
version = "0.5.0"
edition = "2021"
description = "Session memory for Claude Code — injects MEMORY.md, teaches Claude to maintain it"
license = "MIT"
repository = "https://github.com/HugoLopes45/mem"
homepage = "https://github.com/HugoLopes45/mem"
documentation = "https://github.com/HugoLopes45/mem#readme"
readme = "README.md"
keywords = ["claude-code", "memory", "ai-agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mem"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
strip = true
lto = true
